# HouseSnark

./: Cargo.toml  README.md
.github/workflows/: checks.yml
blender-cli/: Cargo.toml  README.md  blender-metadata.json
blender-cli/src/: app_state.rs  config.rs  contract.rs  contract_actions.rs  deposit.rs  main.rs  register.rs  state_file.rs  withdraw.rs
blender-cli/src/relations/: deposit.rs  mod.rs  note.rs  note_check.rs  tangle.rs  types.rs  withdraw.rs
house-snark/: Cargo.toml  README.md
house-snark/relations/: linear.rs
house-snark/relations/merkle_tree/: gadgets.rs  mod.rs  tree.rs
house-snark/relations/shielder/: deposit.rs  mod.rs  parser.rs
house-snark/src/: config.rs  environment.rs  environment2.rs  lib.rs  main.rs  parser.rs  proving_systems.rs  rains_of_castamere.rs  relations.rs  serialization.rs
house-snark/src/relations/: linear.rs  mod.rs  types.rs  xor.rs
house-snark/src/relations/blender/: deposit.rs  mod.rs  note.rs  parser.rs  tangle.rs  types.rs  withdraw.rs
house-snark/src/relations/deposit/: gadgets.rs  mod.rs  relation.rs  tree.rs
house-snark/src/relations/merkle_tree/: gadgets.rs  mod.rs  relation.rs  tree.rs
house-snark/src/relations/mixer/: gadgets.rs  hash_functions.rs  mod.rs  relation.rs  tree.rs
house-snark/src/relations/shielder/: deposit.rs  mod.rs  note.rs  parser.rs  parsing.rs  types.rs  withdraw.rs
shielder-cli/: Cargo.toml
shielder-cli/src/: app_state.rs  config.rs  contract.rs  deposit.rs  main.rs  state_file.rs  withdraw.rs
snarkxt/: Cargo.toml  README.md
snarkxt/metadata/: aleph_metadata.scale
snarkxt/src/: actions.rs  aleph_api.rs  config.rs  confirmation.rs  main.rs  pallet_actions.rs  store_key.rs  verify.rs
src/: config.rs  environment.rs  main.rs  serialization.rs  system.rs
src/relations/: linear.rs  merkle_tree.rs  mod.rs  xor.rs
src/relations/merkle_tree/: gadgets.rs  hash_functions.rs  mod.rs  relation.rs  tree.rs
