[package]
name = "house-snark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
blake2 = { version = "0.9.2", default-features = false }
clap = { version = "4.0", features = ["derive"], optional = true }
color-eyre = { version = "0.6", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
log = { version = "0.4", default-features = false }

ark-crypto-primitives = { version = "^0.3.0", default-features = false, features = [ "r1cs" ] }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-poly = { version = "^0.3.0", default-features = false }
ark-poly-commit = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }

ark-r1cs-std = { version = "^0.3.0", default-features = false }

ark-ed-on-bls12-381 = { version = "^0.3.0", default-features = false, features = ["r1cs"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-groth16 = { version = "^0.3.0", default-features = false }
ark-gm17 = { version = "^0.3.0", default-features = false }
ark-marlin = { version = "^0.3.0", default-features = false }

[features]
default = ["full"]
full = ["std", "cli", "linear", "merkle_tree", "xor", "shielder"]
std = [
    "anyhow/std",
    "blake2/std",
    "log/std",

    "ark-crypto-primitives/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-poly-commit/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-relations/std",
    "ark-r1cs-std/std",
    "ark-ed-on-bls12-381/std",
    "ark-groth16/std",
    "ark-gm17/std",
    "ark-marlin/std",
]
cli = [
    "clap",
    "anyhow/std",
]
linear = []
merkle_tree = []
xor = []
shielder = []
