[package]
name = "snarkxt"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
futures = "0.3.13"
subxt = "0.24.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3.11"
