[package]
name = "snarkxt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
futures = "0.3.13"
subxt = "0.24.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "time"] }

pallet-snarcos = { git = "https://github.com/Cardinal-Cryptography/aleph-node", branch = "snarkeling" }
